Add ability to set search_radius via settings

--- a/web/templates/dashboard/show.html.eex
+++ b/web/templates/dashboard/show.html.eex
@@ -4,6 +4,8 @@
 
 <%= link("Sign out", to: session_path(@conn, :delete), method: :delete) %>
 
+<%= link("Settings", to: settings_path(@conn, :edit)) %>
+
 <div>
   <%= link("Add new post", to: post_path(@conn, :new)) %>
 </div>
